src/objects/EUI_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>EUI Analyses</relationshipLabel>
        <relationshipName>EUI_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUI_Value__c</fullName>
        <label>EUI Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUI__c</fullName>
        <formula>(EUI_Value__c * (9.478*(10^-7)))*12*10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EUI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Time__c</fullName>
        <label>Filter Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Filter_Type__c</fullName>
        <label>Filter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Group__c</fullName>
        <label>Peer Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EUI Analysis</label>
    <nameField>
        <displayFormat>EUIA-{00000000}</displayFormat>
        <label>EUI Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUI Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>